[BE] refactor: 예외처리 메시지 구체화
* 명확한 정보 제공을 통한 디버깅 성능 향상