@@ -64,7 +64,7 @@ public class Project {
   public void changeStatus(ProjectStatus newStatus) {
     if (newStatus == this.status) {
       throw new SameStatusException(
-          String.format("현재 상태(%s)와 동일한 상태(%s)로 변경할 수 없습니다", this.status, newStatus));
+          "현재 상태(%s)와 동일한 상태(%s)로 변경할 수 없습니다".formatted(this.status, newStatus));
     }
 
     this.status = newStatus;
